# EV-Charging

./: .gitignore  README.md
backend/: main.py
cpp_engine/: CMakeLists.txt  README.md
cpp_engine/data/: input.json  output.json
cpp_engine/src/: main.cpp
cpp_engine/src/algorithms/: dijkstra.cpp  dijkstra.h
cpp_engine/src/graph/: graph.cpp  graph.h
cpp_engine/src/models/: edge.h  node.h
cpp_engine/src/optimizer/: optimizer.cpp  optimizer.h
cpp_engine/src/utils/: json_parser.cpp  json_parser.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: MapView.css  MapView.jsx  ResultPanel.jsx  Sidebar.css  Sidebar.jsx  Toast.css  Toast.jsx
frontend/src/utils/: api.js  geo.js  haversine.js  icons.js  sampleData.js
